<resources>
    <string name="app_name">Converters</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>

    <string name="error_value_is_empty">Value is empty!</string>

    <string-array name="array_distance_options">
        <item>Kilometers to miles</item>
        <item>Miles to kilometers</item>
    </string-array>

    <string-array name="array_temperature_options">
        <item>Celsius to Fahrenheit</item>
        <item>Fahrenheit to Celsius</item>
    </string-array>

    <string-array name="array_roman_decimal_number">
        <item>Decimal to Roman Number</item>
    </string-array>/

    <string name="about">About</string>
    <string name="communicate">Communicate</string>
    <string name="convert">Convert</string>
    <string name="created_by_rodrigo_amora">Created by Rodrigo Amora</string>
    <string name="developer">Developer:</string>
    <string name="distance">Distance</string>
    <string name="distance_in_kilometers">Distance in kilometers</string>
    <string name="distance_in_miles">Distance em Miles</string>
    <string name="email">rodrigo.amora.freitas@gmail.com</string>
    <string name="lb_email">E-mail:</string>
    <string name="lb_site">Stie:</string>
    <string name="link_app">https://play.google.com/store/apps/details?id=br.com.rodrigoamora.converters</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_in_celsius">Temperature in celsius</string>
    <string name="temperature_in_fahrenheit">Temperature in fahrenheit</string>
    <string name="result">Resultado:\n %s</string>
    <string name="rodrigo_amora">Rodrigo Amora</string>
    <string name="roman_number">Roman Number</string>
    <string name="share">Share</string>
    <string name="share_app">Download Converters on Play Store:</string>
    <string name="site">Site: www.rodrigoamora.com.br</string>
    <string name="site2">www.rodrigoamora.com.br</string>
    <string name="version">Version:</string>
</resources>
