<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_temperature"
            android:icon="@drawable/ic_temperature"
            android:title="@string/temperature" />

        <item
            android:id="@+id/nav_distance"
            android:icon="@drawable/ic_distance"
            android:title="@string/distance" />

        <item
            android:id="@+id/nav_roman_number"
            android:icon="@drawable/ic_roman_number"
            android:title="@string/roman_number" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
